--- a/NYPD Historic Arrests Data Dashboard.ipynb
+++ b/NYPD Historic Arrests Data Dashboard.ipynb
@@ -310,7 +310,9 @@
    "source": [
     "#### Plotting\n",
     "| puts the graphs next to each other, <br>\n",
-    "& Puts them in the next line."
+    "& Puts them in the next line.\n",
+    "\n",
+    "See the working protoype here: <a href = \"https://prattsavi.github.io/NYDP_ArrestsData/\"> link </a>"
    ]
   },
   {
